--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prime</title>
-
-    <!-- i just want to look at Inter and not Sans Serif -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-
-    <style>body { font-family: "Inter"; }</style>
-</head>
-<body>
-    <!-- Page Info -->
-    <h1>Welcome to Prime!</h1>
-    <p>This program will display the first n prime numbers in a table!</p>
-
-    <!-- Input and Button-->
-    <div>
-        n: <input type="number" id="n" min="1" required />
-        <button onclick="onClick()">Generate!</button>
-    </div> 
-
-    <!-- Calculation Time -->
-    <div id="time"></div>
-
-    <!-- Result -->
-    <div id="table"></div>
-
-    <!-- Load JS -->
-    <script src="script.js"></script>
-</body>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Peachtree Math Cirle</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="/style.css" />
+    </head>
+    <body>
+        <div class="navbar">
+            <a href="/"><!--add image with logo here--> PTMC</a>
+            <a href="/events">Events</a>
+            <a href="/resources">Resources</a>
+            <a href="/news">News</a>
+            <a href="/calendar">Calendar</a>
+            <a href="/team">Team</a>
+        </div>
+    </body>
 </html>
