navbar and icon modifications

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -8,10 +8,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/style.css" />
+        <link rel="icon" href="/images/favicon.ico" />
     </head>
     <body>
         <div class="navbar">
-            <a href="/"><!--add image with logo here--> PTMC</a>
+            <a href="/" class="home"><img src="/images/favicon-light.png" /></a>
             <a href="/events">Events</a>
             <a href="/resources">Resources</a>
             <a href="/news">News</a>
