--- a/public/error-404.html
+++ b/public/error-404.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="utf-8" />
         <!--someone come up with a better page title pls-->
+        <link rel="icon" href="/images/favicon.ico" />
         <title>404</title>
     </head>
     <body>
