--- a/public/team.html
+++ b/public/team.html
@@ -18,6 +18,9 @@
             <a href="/news">News</a>
             <a href="/calendar">Calendar</a>
             <a href="/team">Team</a>
+            <a href="https://discord.gg/8S4m29yV48" class="discord" target="_blank" title="Discord"><img src="/images/discord.png" /></a>
+            <a href="https://www.instagram.com/ptmathcircle/" class="insta" target="_blank" title="Instagram"><img src="/images/Instagram_Glyph_White.png" /></a>
+            <a href="mailto:ptmathcircle@gmail.com" class="email" target="_blank" title="Contact"><img src="/images/email-icon.png" /></a>
         </div>
     </body>
 </html>
