--- a/public/resources.html
+++ b/public/resources.html
@@ -20,7 +20,14 @@
             <a href="/team">Team</a>
             <a href="https://discord.gg/8S4m29yV48" class="discord" target="_blank" title="Discord"><img src="/images/discord.png" /></a>
             <a href="https://www.instagram.com/ptmathcircle/" class="insta" target="_blank" title="Instagram"><img src="/images/Instagram_Glyph_White.png" /></a>
-            <a href="mailto:ptmathcircle@gmail.com" class="email" target="_blank" title="Contact"><img src="/images/email-icon.png" /></a>
+            <p class="email" title="Contact"><img src="/images/email-icon.png" /></a>
         </div>
+        <div id="copyemailprompt">
+            <div id="copyemailpopup" tabindex="0">
+                <p>Want to contact us?</p><br>
+                <button id="copyemail" type="button">Copy email</button>
+            </div>
+        </div>
+        <script src="/scripts/contact.js"></script>
     </body>
 </html>
