add stuff to the home page (not finished yet)

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Peachtree Math Circle</title>
+        <title>PeachTree Math Circle</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet" />
@@ -29,5 +29,13 @@
             </div>
         </div>
         <script src="/scripts/contact.js"></script>
+        <div class="main">
+            <div id="title" class="header">
+                <img class="logo-img" src="/images/favicon.png" data-state="unload" /><br>
+                <h1 class="title" data-state="unload">PeachTree Math Circle</h1><br>
+                <p class="subtitle" data-state="unload">PTMC: Bringing problem solving and critical thinking to the Peach State through competition math.</p>
+            </div>
+            <script src="/scripts/load-animation.js"></script>
+        </div>
     </body>
 </html>
