add to home page

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,14 @@
                 <p class="subtitle" data-state="unload">PTMC: Bringing problem solving and critical thinking to the Peach State through competition math.</p>
             </div>
             <script src="/scripts/load-animation.js"></script>
+            <div class="body">
+                <h2 class="heading">What is PTMC?</h2>
+                <hr>
+                <p class="paragraph">PeachTree Math Circle (PTMC) is a student-led community consisting of passionate competition math enthusiasts from the greater Atlanta area. Our team members share a common love for problem solving and are commited to helping students of all levels discover the beauty of mathematics.</p><br>
+                <h2 class="heading">Our Vision</h2>
+                <hr>
+                <p class="paragraph">PTMC was founded with a clear goal: helping more students discover a love for math and enabling them to develop important problem-solving and critical thinking skills. Importantly, PTMC offers entry points for beginners as well as growth opportunities for advanced students.</p>
+            </div>
         </div>
     </body>
 </html>
