add to home page

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,25 @@
                 <p class="paragraph">PeachTree Math Circle (PTMC) is a student-led community consisting of passionate competition math enthusiasts from the greater Atlanta area. Our team members share a common love for problem solving and are commited to helping students of all levels discover the beauty of mathematics.</p><br>
                 <h2 class="heading">Our Vision</h2>
                 <hr>
-                <p class="paragraph">PTMC was founded with a clear goal: helping more students discover a love for math and enabling them to develop important problem-solving and critical thinking skills. Importantly, PTMC offers entry points for beginners as well as growth opportunities for advanced students.</p>
+                <p class="paragraph">PTMC was founded with a clear goal: helping more students discover a love for math and enabling them to develop important problem-solving and critical thinking skills. Importantly, PTMC offers entry points for beginners as well as growth opportunities for advanced students.</p><br>
+                <h2 class="heading">Our Team's Achievements</h2>
+                <table class="stat-table">
+                    <colgroup>
+                        <col>
+                        <col>
+                        <col>
+                    </colgroup>
+                    <tr>
+                        <th>20+</th>
+                        <th>10+</th>
+                        <th>5+</th>
+                    </tr>
+                    <tr>
+                        <td>AIME Qualifiers</td>
+                        <td>MATHCOUNTS National Competitors</td>
+                        <td>USA(J)MO Qualifers</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </body>
