--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <a href="/team">Team</a>
             <a href="https://discord.gg/8S4m29yV48" class="discord" target="_blank" title="Discord"><img src="/images/discord.png" /></a>
             <a href="https://www.instagram.com/ptmathcircle/" class="insta" target="_blank" title="Instagram"><img src="/images/Instagram_Glyph_White.png" /></a>
-            <p class="email" title="Contact"><img src="/images/email-icon.png" /></a>
+            <p class="email" title="Contact"><img src="/images/email-icon.png" /></p>
         </div>
         <div id="copyemailprompt">
             <div id="copyemailpopup" tabindex="0">
