--- a/public/error-404.html
+++ b/public/error-404.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <!--this page will be sent when the user gets a 404 error-->
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="utf-8" />
-        <!--someone come up with a better page title pls-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Page Not Found - PeachTree Math Circle</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,300..700&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="/style.css" />
         <link rel="icon" href="/images/favicon.ico" />
-        <title>404</title>
     </head>
     <body>
-        
+        <main class="page empty-page">
+            <div>
+                <h1>404</h1>
+                <p>The page you requested does not exist.</p>
+                <p><a href="/">Return to home</a></p>
+            </div>
+        </main>
     </body>
 </html>
