--- a/public/resources.html
+++ b/public/resources.html
@@ -1,33 +1,71 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Resources - PeachTree Math Circle</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,300..700&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/style.css" />
         <link rel="icon" href="/images/favicon.ico" />
     </head>
     <body>
         <div class="navbar">
-            <a href="/" class="home"><img src="/images/favicon-light.png" /></a>
+            <a href="/" class="home"><img src="/images/favicon-light.png" alt="PeachTree Math Circle logo" /></a>
             <a href="/events">Events</a>
             <a href="/resources">Resources</a>
             <a href="/news">News</a>
             <a href="/calendar">Calendar</a>
             <a href="/team">Team</a>
-            <a href="https://discord.gg/8S4m29yV48" class="discord" target="_blank" title="Discord"><img src="/images/discord.png" /></a>
-            <a href="https://www.instagram.com/ptmathcircle/" class="insta" target="_blank" title="Instagram"><img src="/images/Instagram_Glyph_White.png" /></a>
-            <p class="email" title="Contact"><img src="/images/email-icon.png" /></p>
+            <a href="https://discord.gg/8S4m29yV48" class="discord" target="_blank" rel="noreferrer" title="Discord"><img src="/images/discord.png" alt="Discord" /></a>
+            <a href="https://www.instagram.com/ptmathcircle/" class="insta" target="_blank" rel="noreferrer" title="Instagram"><img src="/images/Instagram_Glyph_White.png" alt="Instagram" /></a>
+            <p class="email" title="Contact"><img src="/images/email-icon.png" alt="Email" /></p>
         </div>
+
         <div id="copyemailprompt">
             <div id="copyemailpopup" tabindex="0">
-                <p>Want to contact us?</p><br>
+                <p>Want to contact us?</p>
                 <button id="copyemail" type="button">Copy email</button>
             </div>
         </div>
+
+        <main class="page">
+            <section class="hero" style="--hero-image: linear-gradient(130deg, #305f87, #2e6c59); --showcase-image: url('/images/favicon-light.png');">
+                <div class="hero-copy">
+                    <h1 class="intro-item">Learning Resources</h1>
+                    <p class="intro-item">Organize handouts, lesson notes, and challenge sets here. Keep each card one topic so students can scan quickly.</p>
+                </div>
+                <aside class="hero-media intro-item" data-parallax>
+                    <p>Quick-edit image slot for featured workbook or handout cover.</p>
+                </aside>
+            </section>
+
+            <section class="section reveal">
+                <h2>Resource Library</h2>
+                <div class="grid cols-2">
+                    <article class="card">
+                        <h3>Foundations Track</h3>
+                        <p>Add beginner-friendly sets on algebraic manipulation, counting basics, and geometric visualization.</p>
+                    </article>
+                    <article class="card">
+                        <h3>Contest Track</h3>
+                        <p>Add AMC/AIME style drills with curated solution writeups and extension prompts.</p>
+                    </article>
+                    <article class="card">
+                        <h3>Proof Writing</h3>
+                        <p>Add short proof clinics focused on contradiction, induction, and inequality arguments.</p>
+                    </article>
+                    <article class="card">
+                        <h3>Teacher / Mentor Notes</h3>
+                        <p>Use this area for session guides, pacing notes, and recurring student misconceptions.</p>
+                    </article>
+                </div>
+            </section>
+        </main>
+
         <script src="/scripts/contact.js"></script>
+        <script src="/scripts/load-animation.js"></script>
+        <script src="/scripts/scroll-effects.js"></script>
     </body>
 </html>
